Added entity for help tab

--- a/chrome/custombuttons/locale/en-US/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/en-US/custombuttons/editor.dtd
@@ -1,3 +1,4 @@
+<!ENTITY editor.dialog.help "Help">
 <!ENTITY editor.dialog.title "Edit button">
 <!ENTITY editor.name "Name:">
 <!ENTITY editor.name.tooltiptext "Defines button&apos;s label and popup text">
