--- a/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.dtd
@@ -3,6 +3,7 @@
 <!ENTITY custombuttons.buttonPopup.remove "Delete button">
 <!ENTITY custombuttons.buttonPopup.clone "Clone button">
 <!ENTITY custombuttons.buttonPopup.copyURI "Copy to clipboard">
+<!ENTITY custombuttons.buttonPopup.bookmark "Bookmark Button">
 
 <!ENTITY custombuttons_prefsDialog.title "Custombuttons: settings">
 <!ENTITY custombuttons.prefs.use_xml_button_format "Use new button format">
