--- a/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.dtd
@@ -4,6 +4,7 @@
 <!ENTITY custombuttons.buttonPopup.clone "Клонировать">
 <!ENTITY custombuttons.buttonPopup.copyURI "Копировать код в буфер">
 <!ENTITY custombuttons.buttonPopup.bookmark "Сделать закладку">
+<!ENTITY custombuttons.buttonPopup.help "Справка">
 
 <!ENTITY custombuttons_prefsDialog.title "Custombuttons: настройки">
 <!ENTITY custombuttons.prefs.use_xml_button_format "Использовать новый формат кнопки">
