--- a/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.properties
@@ -2,4 +2,7 @@ RemoveConfirm=Delete button "%s"?
 ButtonAddedAlert=The button was successfully created.\nYou can add it to any toolbar via "View -> Toolbars -> Customize..."
 InstallConfirm=Are you sure you want to install "%s" button?
 ButtonErrors=The button can not be created because it contains errors!
+ButtonHelpTitle="Help for \"%s\" :: ID = %y"
+ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=Gives a possibility to create custom toolbarbuttons.
+
