--- a/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.properties
@@ -2,4 +2,6 @@ RemoveConfirm=Удалить кнопку "%s"?
 ButtonAddedAlert=Кнопка была успешно создана. Вы можете добавить её на любую панель инструментов через меню "Вид -> Панели инструментов -> Настроить..."
 InstallConfirm=Установить кнопку "%s"?
 ButtonErrors=Кнопка не может быть создана, потому что содержит ошибки!
+ButtonHelpTitle="Справка по кнопке \"%s\" :: ID = %y"
+ContinueButton=Продолжить
 extensions.custombuttons@xsms.org.description=Позволяет создавать кнопки для панелей инструментов.
