--- a/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.dtd
@@ -6,6 +6,7 @@
 <!ENTITY custombuttons.buttonPopup.bookmark "Bookmark Button">
 <!ENTITY custombuttons.buttonPopup.help "Button Help">
 <!ENTITY custombuttons.buttonPopup.update "Update Button">
+<!ENTITY custombuttons.buttonPopup.subCall "Custom Button">
 
 <!ENTITY custombuttons_prefsDialog.title "Custombuttons: settings">
 <!ENTITY custombuttons.prefs.use_xml_button_format "Use new button format">
