--- a/chrome/custombuttons/locale/pl-PL/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/pl-PL/custombuttons/custombuttons.properties
@@ -1,5 +1,8 @@
 RemoveConfirm=Usunąć przycisk "%s"?
+UpdateConfirm=Are you sure you want to update "%s" button with the %n button ?
 ButtonAddedAlert=Przycisk został utworzony.\nAby dodać przycisk do paska narzędzi, wybierz z menu "Widok -> Paski narzędzi -> Dostosuj..."
 InstallConfirm=Czy napewno zainstalować przycisk "%s" ?
 ButtonErrors=Przycisk nie został utworzony ponieważ jego kod zawiera błędy!
+ButtonHelpTitle="Help for \"%s\" :: ID = %y"
+ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=Oferuje możliwość tworzenia własnych przycisków na pasku narzędzi. 
