--- a/chrome/custombuttons/locale/pt-BR/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/pt-BR/custombuttons/editor.dtd
@@ -1,3 +1,4 @@
+<!ENTITY editor.dialog.help "Help">
 <!ENTITY editor.dialog.title "Editar botão">
 <!ENTITY editor.name "Nome:">
 <!ENTITY editor.name.tooltiptext "Define o local e o texto de poupup do botão">
