--- a/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.dtd
@@ -3,9 +3,14 @@
 <!ENTITY custombuttons.buttonPopup.remove "删除该按钮">
 <!ENTITY custombuttons.buttonPopup.clone "复制该按钮">
 <!ENTITY custombuttons.buttonPopup.copyURI "复制该按钮到剪贴板">
+<!ENTITY custombuttons.buttonPopup.bookmark "Bookmark Button">
+<!ENTITY custombuttons.buttonPopup.help "Button Help">
+<!ENTITY custombuttons.buttonPopup.update "Update Button">
+<!ENTITY custombuttons.buttonPopup.subCall "Custom Button">
 
 <!ENTITY custombuttons_prefsDialog.title "Custombuttons: settings">
 <!ENTITY custombuttons.prefs.use_xml_button_format "Use new button format">
+<!ENTITY custombuttons.prefs.use_cb2_button_format "Use old Custom Buttons² button format">
 <!ENTITY custombuttons.prefs.show_apply_button "Show &quot;Apply&quot; button in code editor">
 <!ENTITY custombuttons.prefs.disable_init_in_customize_toolbar "Disable initialization id &quot;Customize Toolbar&quot; dialog">
 <!ENTITY custombuttons.prefs.enable_custombutton_protocol "Enable install buttons from mail messages">
