--- a/chrome/custombuttons/locale/sk-SK/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/sk-SK/custombuttons/editor.dtd
@@ -1,3 +1,4 @@
+<!ENTITY editor.dialog.help "Help">
 <!ENTITY editor.dialog.title "Upraviť tlačidlo">
 <!ENTITY editor.name "Názov:">
 <!ENTITY editor.name.tooltiptext "Určuje text a bublinový popis tlačidla">
