--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 Changelog
 ==============
+0.0.2.8
+* Hotkey doesn't runs button code bug fixed
 0.0.2.7
 * Fixed few browser UI synchronization issues
 * Added Firefox 3b5pre support
