--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 Changelog
 ==============
+0.0.3
+# Fixed: bug with creating cb links for buttons, which contain ']]>' character sequence in code
+# Fixed: "menu" and "menu-button" custom buttons styling in Thunderbird/Sunbird
+! Changed: the way to keep context menu in actual state
 0.0.2.9
 # Fixed: user specified context menu doesn't work
 + Added: new custom buttons debug facility - js console shows correct number for error line and button editor can be opened just from js console
