--- a/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.dtd
@@ -14,3 +14,5 @@
 <!ENTITY custombuttons.prefs.show_apply_button "Отобразить кнопку &quot;Применить&quot; в редакторе кода">
 <!ENTITY custombuttons.prefs.disable_init_in_customize_toolbar "Запретить инициализацию кнопок в диалоговом окне &quot;Настройка панелей инструментов&quot;">
 <!ENTITY custombuttons.prefs.enable_custombutton_protocol "Разрешить установку кнопок из почтовых сообщений">
+
+<!ENTITY custombuttons.about.supportPageURL "Открыть страницу поддержки">
