--- a/chrome/custombuttons/locale/ru-RU/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/editor.dtd
@@ -21,3 +21,4 @@
 <!ENTITY editor.buttonSettings.disableDefaultKeyBehavior "Запретить стандартное действие для указанного сочетания клавиш">
 <!ENTITY editor.buttonSettings.initializationGroupbox "Инициализация">
 <!ENTITY editor.buttonSettings.initInCustomizeToolbarDialog "Разрешить инициализацию в диалоговом окне &quot;Настройка панелей инструментов&quot;">
+<!ENTITY editor.buttonSettings.addMoreKeys "Дополнительно...">
