+ Added: locale for new button install confirmation dialog interface

--- a/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.properties
@@ -2,6 +2,7 @@ RemoveConfirm=Удалить кнопку "%s"?
 UpdateConfirm=Обновить кнопку "%s" кодом кнопки "%n" ?
 ButtonAddedAlert=Кнопка была успешно создана. Вы можете добавить её на любую панель инструментов через меню "Вид -> Панели инструментов -> Настроить..."
 InstallConfirm=Установить кнопку "%s"?
+OpenInEditor=Редактировать...
 ButtonErrors=Кнопка не может быть создана, потому что содержит ошибки!
 ButtonHelpTitle="Справка по кнопке \"%s\" :: ID = %y"
 ContinueButton=Продолжить
