--- a/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.properties
@@ -2,6 +2,7 @@ RemoveConfirm=Odstrániť tlačidlo "%s"?
 UpdateConfirm=Are you sure you want to update "%s" button with the %n button ?
 ButtonAddedAlert=Tlačidlo bolo úspešne vytvorené.\nMôžete ho pridať na ktorýkoľvek panel cez ponuku "Zobraziť -> Panely s nástrojmi -> Prispôsobiť..."
 InstallConfirm=Naozaj chcete nainštalovať tlačidlo "%s"?
+OpenInEditor=Edit...
 ButtonErrors=Tlačidlo nemôže byť kvôli chybám vytvorené!
 ButtonHelpTitle="Help for \"%s\" :: ID = %y"
 ContinueButton=Continue
