--- a/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.properties
@@ -2,6 +2,7 @@ RemoveConfirm=Delete button "%s"?
 UpdateConfirm=Are you sure you want to update "%s" button with the %n button ?
 ButtonAddedAlert=The button was successfully created.\nYou can add it to any toolbar via "View -> Toolbars -> Customize..."
 InstallConfirm=Are you sure you want to install "%s" button?
+OpenInEditor=Edit...
 ButtonErrors=The button can not be created because it contains errors!
 ButtonHelpTitle="Help for \"%s\" :: ID = %y"
 ContinueButton=Continue
