--- a/chrome/custombuttons/locale/pt-BR/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/pt-BR/custombuttons/custombuttons.properties
@@ -2,6 +2,7 @@ RemoveConfirm=Deletar botão "%s"?
 UpdateConfirm=Are you sure you want to update "%s" button with the %n button ?
 ButtonAddedAlert=O botão foi criado com sucesso.\nVocê pdoe adicionar ele a qulquer barra de ferramentes via "Exibir -> Barra de Ferramentas -> Customizar..."
 InstallConfirm=Você tem ceteza que quer instalar o botão "%s"?
+OpenInEditor=Edit...
 ButtonErrors=O botão não pôde ser criado pois ele contém erros!
 ButtonHelpTitle="Help for \"%s\" :: ID = %y"
 ContinueButton=Continue
