--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 Changelog
 ==============
 0.0.3.5
-# Fixed "Ctrl+Enter cannot be bound to a button" bug
+# Fixed: "Ctrl+Enter cannot be bound to a button" bug
 0.0.3.4
 + Added: edit button code feature before install
 # Fixed: some cb2api support bugs
