--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 Changelog
 ==============
+0.0.3.6
++ Added: Firefox 3.1 support
++ Added: Sunbird 0.9 support
+# Fixed: some Thunderbird/Sunbird ui bugs
 0.0.3.5
 # Fixed: "Ctrl+Enter cannot be bound to a button" bug
 0.0.3.4
