--- a/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.properties
@@ -3,6 +3,8 @@ UpdateConfirm=Обновить кнопку "%s" кодом кнопки "%n" ?
 ButtonAddedAlert=Кнопка была успешно создана. Вы можете добавить её на любую панель инструментов через меню "Вид -> Панели инструментов -> Настроить..."
 InstallConfirm=Установить кнопку "%s"?
 OpenInEditor=Редактировать...
+ButtonDoesntExist=Невозможно выполнить код, так как кнопка ещё не создана
+AddButtonEditorDialogTitle=Создание кнопки
 ButtonErrors=Кнопка не может быть создана, потому что содержит ошибки!
 ButtonHelpTitle="Справка по кнопке \"%s\" :: ID = %y"
 ContinueButton=Продолжить
