--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,13 @@
 Changelog
 ==============
+0.0.4.0
++ Added: three predefined icons for new buttons
++ Added: more than one code editor can be opened at same time
++ Added: code editor doesn't depends on main window
++ Added: Firefox 3.6a1pre support
+! Changed: code architecture
+0.0.3.10
++ Added: more than one code editor can be opened
 0.0.3.9
 + Added: Thunderbird 3.0b3pre support
 + Added: Calendar 1.0pre support
