--- a/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.properties
@@ -9,4 +9,6 @@ ButtonErrors=The button can not be created because it contains errors!
 ButtonHelpTitle="Help for \"%s\" :: ID = %y"
 ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=Gives a possibility to create custom toolbarbuttons.
+finddialogFindTitle=Find
+finddialogReplaceTitle=Replace
 
