--- a/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.properties
@@ -9,3 +9,5 @@ ButtonErrors=Кнопка не может быть создана, потому 
 ButtonHelpTitle="Справка по кнопке \"%s\" :: ID = %y"
 ContinueButton=Продолжить
 extensions.custombuttons@xsms.org.description=Позволяет создавать кнопки для панелей инструментов.
+finddialogFindTitle=Найти
+finddialogReplaceTitle=Заменить
