--- a/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.properties
@@ -9,3 +9,5 @@ ButtonErrors=Tlačidlo nemôže byť kvôli chybám vytvorené!
 ButtonHelpTitle="Help for \"%s\" :: ID = %y"
 ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=Ponúka možnosť vytvoriť si vlastné tlačidlá na panel nástrojov.
+finddialogFindTitle=Find
+finddialogReplaceTitle=Replace
