--- a/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.properties
@@ -9,3 +9,5 @@ ButtonErrors=由于该按钮有错误，因此无法创建！
 ButtonHelpTitle="Help for \"%s\" :: ID = %y"
 ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=让您有机会创建自定义工具栏按钮。
+finddialogFindTitle=Find
+finddialogReplaceTitle=Replace
