--- a/chrome/custombuttons/locale/pl-PL/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/pl-PL/custombuttons/custombuttons.properties
@@ -9,3 +9,6 @@ ButtonErrors=Przycisk nie został utworzony ponieważ jego kod zawiera błędy!
 ButtonHelpTitle="Help for \"%s\" :: ID = %y"
 ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=Oferuje możliwość tworzenia własnych przycisków na pasku narzędzi. 
+finddialogFindTitle=Find
+finddialogReplaceTitle=Replace
+
