--- a/chrome/custombuttons/locale/pt-BR/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/pt-BR/custombuttons/custombuttons.properties
@@ -9,3 +9,6 @@ ButtonErrors=O botão não pôde ser criado pois ele contém erros!
 ButtonHelpTitle="Help for \"%s\" :: ID = %y"
 ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=Dá a possibilidade de criar botões customizáveis na Barra de Ferramentas
+finddialogFindTitle=Find
+finddialogReplaceTitle=Replace
+
