--- a/chrome/custombuttons/locale/pt-BR/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/pt-BR/custombuttons/custombuttons.dtd
@@ -1,5 +1,5 @@
-<!ENTITY custombuttons.viewMenu_Item "Adicionar novo botão…">
-<!ENTITY custombuttons.buttonPopup.edit "Editar botão…">
+<!ENTITY custombuttons.viewMenu_Item "Adicionar novo botão...">
+<!ENTITY custombuttons.buttonPopup.edit "Editar botão...">
 <!ENTITY custombuttons.buttonPopup.remove "Deletar botão">
 <!ENTITY custombuttons.buttonPopup.clone "Clonar botão">
 <!ENTITY custombuttons.buttonPopup.copyURI "Copiar para o lcipboard">
