--- a/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.properties
@@ -1,8 +1,8 @@
 RemoveConfirm=Odstrániť tlačidlo "%s"?
 UpdateConfirm=Are you sure you want to update "%s" button with the %n button ?
-ButtonAddedAlert=Tlačidlo bolo úspešne vytvorené.\nMôžete ho pridať na ktorýkoľvek panel cez ponuku "Zobraziť -> Panely s nástrojmi -> Prispôsobiť…"
+ButtonAddedAlert=Tlačidlo bolo úspešne vytvorené.\nMôžete ho pridať na ktorýkoľvek panel cez ponuku "Zobraziť -> Panely s nástrojmi -> Prispôsobiť..."
 InstallConfirm=Naozaj chcete nainštalovať tlačidlo "%s"?
-OpenInEditor=Edit…
+OpenInEditor=Edit...
 ButtonDoesntExist=Can't execute code because button doesn't exist yet
 AddButtonEditorDialogTitle=Add new button
 ButtonErrors=Tlačidlo nemôže byť kvôli chybám vytvorené!
