--- a/chrome/custombuttons/locale/en-US/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/en-US/custombuttons/editor.dtd
@@ -3,9 +3,9 @@
 <!ENTITY editor.name "Name:">
 <!ENTITY editor.name.tooltiptext "Defines button&apos;s label and popup text">
 <!ENTITY editor.image "Image:">
-<!ENTITY editor.select "Browse…">
+<!ENTITY editor.select "Browse...">
 <!ENTITY editor.base64 "&#8658; base64">
-<!ENTITY editor.base64.tooltiptext "Converts image to base64 format (data:image/png;base64,…)">
+<!ENTITY editor.base64.tooltiptext "Converts image to base64 format (data:image/png;base64,...)">
 <!ENTITY editor.code "Code">
 <!ENTITY editor.code.tooltiptext "Executes on pressing the button">
 <!ENTITY editor.initCode "Initialization code">
@@ -21,7 +21,7 @@
 <!ENTITY editor.buttonSettings.disableDefaultKeyBehavior "Disable default action for specified hotkey">
 <!ENTITY editor.buttonSettings.initializationGroupbox "Initialization">
 <!ENTITY editor.buttonSettings.initInCustomizeToolbarDialog "Enable initialization in &quot;Customize Toolbar&quot; dialog">
-<!ENTITY editor.buttonSettings.addMoreKeys "More…">
+<!ENTITY editor.buttonSettings.addMoreKeys "More...">
 
 <!ENTITY cbeditor.quickfindtextbox "Quick Find: ">
 
