--- a/chrome/custombuttons/locale/pl-PL/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/pl-PL/custombuttons/editor.dtd
@@ -3,9 +3,9 @@
 <!ENTITY editor.name "Nazwa:">
 <!ENTITY editor.name.tooltiptext "Ustala etykietkę przycisku, i tekst podpowiedzi">
 <!ENTITY editor.image "Ikona:">
-<!ENTITY editor.select "Przeglądaj…">
+<!ENTITY editor.select "Przeglądaj...">
 <!ENTITY editor.base64 "&#10162; base64">
-<!ENTITY editor.base64.tooltiptext "Konwertuje obrazek ikony do formatu base64 (data:image/png;base64,…)">
+<!ENTITY editor.base64.tooltiptext "Konwertuje obrazek ikony do formatu base64 (data:image/png;base64,...)">
 <!ENTITY editor.code "Kod">
 <!ENTITY editor.code.tooltiptext "Uruchamiany po wciśnięciu przycisku">
 <!ENTITY editor.initCode "Inicjowany kod">
@@ -21,7 +21,7 @@
 <!ENTITY editor.buttonSettings.disableDefaultKeyBehavior "Disable default action for specified hotkey">
 <!ENTITY editor.buttonSettings.initializationGroupbox "Initialization">
 <!ENTITY editor.buttonSettings.initInCustomizeToolbarDialog "Enable initialization in &quot;Customize Toolbar&quot; dialog">
-<!ENTITY editor.buttonSettings.addMoreKeys "More…">
+<!ENTITY editor.buttonSettings.addMoreKeys "More...">
 
 <!ENTITY cbeditor.quickfindtextbox "Quick Find: ">
 
