--- a/chrome/custombuttons/locale/pt-BR/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/pt-BR/custombuttons/editor.dtd
@@ -3,9 +3,9 @@
 <!ENTITY editor.name "Nome:">
 <!ENTITY editor.name.tooltiptext "Define o local e o texto de poupup do botão">
 <!ENTITY editor.image "Imagem:">
-<!ENTITY editor.select "Procurar…">
+<!ENTITY editor.select "Procurar...">
 <!ENTITY editor.base64 "&#8658; base64">
-<!ENTITY editor.base64.tooltiptext "Converte a imagem para o formato base64 (data:image/png;base64,…)">
+<!ENTITY editor.base64.tooltiptext "Converte a imagem para o formato base64 (data:image/png;base64,...)">
 <!ENTITY editor.code "Código">
 <!ENTITY editor.code.tooltiptext "Executa ao pressionar o botão">
 <!ENTITY editor.initCode "Código de inicialização">
@@ -21,7 +21,7 @@
 <!ENTITY editor.buttonSettings.disableDefaultKeyBehavior "Disable default action for specified hotkey">
 <!ENTITY editor.buttonSettings.initializationGroupbox "Initialization">
 <!ENTITY editor.buttonSettings.initInCustomizeToolbarDialog "Enable initialization in &quot;Customize Toolbar&quot; dialog">
-<!ENTITY editor.buttonSettings.addMoreKeys "More…">
+<!ENTITY editor.buttonSettings.addMoreKeys "More...">
 
 <!ENTITY cbeditor.quickfindtextbox "Quick Find: ">
 
