--- a/chrome/custombuttons/locale/ru-RU/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/editor.dtd
@@ -3,9 +3,9 @@
 <!ENTITY editor.name "Имя:">
 <!ENTITY editor.name.tooltiptext "Задаёт надпись на кнопке и всплывающую подсказку">
 <!ENTITY editor.image "Картинка:">
-<!ENTITY editor.select "Обзор…">
+<!ENTITY editor.select "Обзор...">
 <!ENTITY editor.base64 "&#8658; base64">
-<!ENTITY editor.base64.tooltiptext "Конвертация картинки в формат base64 (data:image/png;base64,…)">
+<!ENTITY editor.base64.tooltiptext "Конвертация картинки в формат base64 (data:image/png;base64,...)">
 <!ENTITY editor.code "Код">
 <!ENTITY editor.code.tooltiptext "Выполняется при нажатии на кнопку">
 <!ENTITY editor.initCode "Инициализация">
@@ -21,7 +21,7 @@
 <!ENTITY editor.buttonSettings.disableDefaultKeyBehavior "Запретить стандартное действие для указанного сочетания клавиш">
 <!ENTITY editor.buttonSettings.initializationGroupbox "Инициализация">
 <!ENTITY editor.buttonSettings.initInCustomizeToolbarDialog "Разрешить инициализацию в диалоговом окне &quot;Настройка панелей инструментов&quot;">
-<!ENTITY editor.buttonSettings.addMoreKeys "Дополнительно…">
+<!ENTITY editor.buttonSettings.addMoreKeys "Дополнительно...">
 
 <!ENTITY cbeditor.quickfindtextbox "Быстрый поиск: ">
 
