--- a/chrome/custombuttons/locale/en-US/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/en-US/custombuttons/editor.dtd
@@ -1,27 +1,36 @@
 <!ENTITY editor.dialog.help "Help">
+<!ENTITY editor.dialog.help.accesskey "H">
 <!ENTITY editor.dialog.title "Edit button">
 <!ENTITY editor.name "Name:">
+<!ENTITY editor.name.accesskey "N">
 <!ENTITY editor.name.tooltiptext "Defines button&apos;s label and popup text">
 <!ENTITY editor.image "Image:">
-<!ENTITY editor.select "Browse...">
+<!ENTITY editor.image.accesskey "m">
+<!ENTITY editor.select "Browse…">
+<!ENTITY editor.select.accesskey "o">
 <!ENTITY editor.base64 "&#8658; base64">
+<!ENTITY editor.base64.accesskey "b">
 <!ENTITY editor.base64.tooltiptext "Converts image to base64 format (data:image/png;base64,...)">
 <!ENTITY editor.code "Code">
+<!ENTITY editor.code.accesskey "C">
 <!ENTITY editor.code.tooltiptext "Executes on pressing the button">
 <!ENTITY editor.initCode "Initialization code">
+<!ENTITY editor.initCode.accesskey "I">
 <!ENTITY editor.initCode.tooltiptext "Executes on browser startup">
 <!ENTITY editor.code.defaultValue "/*CODE*/">
 <!ENTITY editor.initCode.defaultValue "/*Initialization Code*/">
 <!ENTITY editor.Apply "Apply">
 <!ENTITY editor.urlfield "Button URL:">
+<!ENTITY editor.urlfield.accesskey "U">
 <!ENTITY editor.buttonSettings "Button settings">
+<!ENTITY editor.buttonSettings.accesskey "s">
 <!ENTITY editor.buttonSettings.tooltiptext "Button settings panel">
 <!ENTITY editor.buttonSettings.hotKeyGroupbox "&quot;Hot&quot; key">
 <!ENTITY editor.buttonSettings.accelkey "Hotkey:">
 <!ENTITY editor.buttonSettings.disableDefaultKeyBehavior "Disable default action for specified hotkey">
 <!ENTITY editor.buttonSettings.initializationGroupbox "Initialization">
 <!ENTITY editor.buttonSettings.initInCustomizeToolbarDialog "Enable initialization in &quot;Customize Toolbar&quot; dialog">
-<!ENTITY editor.buttonSettings.addMoreKeys "More...">
+<!ENTITY editor.buttonSettings.addMoreKeys "More…">
 
 <!ENTITY cbeditor.quickfindtextbox "Quick Find: ">
 
