--- a/chrome/custombuttons/locale/pl-PL/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/pl-PL/custombuttons/editor.dtd
@@ -1,27 +1,35 @@
 <!ENTITY editor.dialog.help "Help">
+<!ENTITY editor.dialog.help.accesskey "H">
 <!ENTITY editor.dialog.title "Edycja przycisku">
 <!ENTITY editor.name "Nazwa:">
+<!ENTITY editor.name.accesskey "N">
 <!ENTITY editor.name.tooltiptext "Ustala etykietkę przycisku, i tekst podpowiedzi">
 <!ENTITY editor.image "Ikona:">
-<!ENTITY editor.select "Przeglądaj...">
+<!ENTITY editor.image.accesskey "m">
+<!ENTITY editor.select "Przeglądaj…">
 <!ENTITY editor.base64 "&#10162; base64">
+<!ENTITY editor.base64.accesskey "b">
 <!ENTITY editor.base64.tooltiptext "Konwertuje obrazek ikony do formatu base64 (data:image/png;base64,...)">
 <!ENTITY editor.code "Kod">
+<!ENTITY editor.code.accesskey "C">
 <!ENTITY editor.code.tooltiptext "Uruchamiany po wciśnięciu przycisku">
 <!ENTITY editor.initCode "Inicjowany kod">
+<!ENTITY editor.initCode.accesskey "I">
 <!ENTITY editor.initCode.tooltiptext "Uruchamiany przy starcie przeglądarki">
 <!ENTITY editor.code.defaultValue "/*KOD*/">
 <!ENTITY editor.initCode.defaultValue "/*Inicjowany kod*/">
 <!ENTITY editor.Apply "Apply">
 <!ENTITY editor.urlfield "Button URL:">
+<!ENTITY editor.urlfield.accesskey "U">
 <!ENTITY editor.buttonSettings "Button settings">
+<!ENTITY editor.buttonSettings.accesskey "s">
 <!ENTITY editor.buttonSettings.tooltiptext "Button settings panel">
 <!ENTITY editor.buttonSettings.hotKeyGroupbox "&quot;Hot&quot; key">
 <!ENTITY editor.buttonSettings.accelkey "Hotkey:">
 <!ENTITY editor.buttonSettings.disableDefaultKeyBehavior "Disable default action for specified hotkey">
 <!ENTITY editor.buttonSettings.initializationGroupbox "Initialization">
 <!ENTITY editor.buttonSettings.initInCustomizeToolbarDialog "Enable initialization in &quot;Customize Toolbar&quot; dialog">
-<!ENTITY editor.buttonSettings.addMoreKeys "More...">
+<!ENTITY editor.buttonSettings.addMoreKeys "More…">
 
 <!ENTITY cbeditor.quickfindtextbox "Quick Find: ">
 
