--- a/chrome/custombuttons/locale/ru-RU/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/editor.dtd
@@ -1,27 +1,36 @@
 <!ENTITY editor.dialog.help "Help">
+<!ENTITY editor.dialog.help.accesskey "H">
 <!ENTITY editor.dialog.title "Редактирование кнопки">
 <!ENTITY editor.name "Имя:">
+<!ENTITY editor.name.accesskey "N">
 <!ENTITY editor.name.tooltiptext "Задаёт надпись на кнопке и всплывающую подсказку">
 <!ENTITY editor.image "Картинка:">
-<!ENTITY editor.select "Обзор...">
+<!ENTITY editor.image.accesskey "m">
+<!ENTITY editor.select "Обзор…">
+<!ENTITY editor.select.accesskey "o">
 <!ENTITY editor.base64 "&#8658; base64">
+<!ENTITY editor.base64.accesskey "b">
 <!ENTITY editor.base64.tooltiptext "Конвертация картинки в формат base64 (data:image/png;base64,...)">
 <!ENTITY editor.code "Код">
+<!ENTITY editor.code.accesskey "C">
 <!ENTITY editor.code.tooltiptext "Выполняется при нажатии на кнопку">
 <!ENTITY editor.initCode "Инициализация">
+<!ENTITY editor.initCode.accesskey "I">
 <!ENTITY editor.initCode.tooltiptext "Выполняется при загрузке браузера">
 <!ENTITY editor.code.defaultValue "/*CODE*/">
 <!ENTITY editor.initCode.defaultValue "/*Initialization Code*/">
 <!ENTITY editor.Apply "Применить">
 <!ENTITY editor.urlfield "URL кнопки:">
+<!ENTITY editor.urlfield.accesskey "U">
 <!ENTITY editor.buttonSettings "Настройки кнопки">
+<!ENTITY editor.buttonSettings.accesskey "s">
 <!ENTITY editor.buttonSettings.tooltiptext "Панель настроек кнопки">
 <!ENTITY editor.buttonSettings.hotKeyGroupbox "&quot;Горячая&quot; клавиша">
 <!ENTITY editor.buttonSettings.accelkey "Сочетание клавиш:">
 <!ENTITY editor.buttonSettings.disableDefaultKeyBehavior "Запретить стандартное действие для указанного сочетания клавиш">
 <!ENTITY editor.buttonSettings.initializationGroupbox "Инициализация">
 <!ENTITY editor.buttonSettings.initInCustomizeToolbarDialog "Разрешить инициализацию в диалоговом окне &quot;Настройка панелей инструментов&quot;">
-<!ENTITY editor.buttonSettings.addMoreKeys "Дополнительно...">
+<!ENTITY editor.buttonSettings.addMoreKeys "Дополнительно…">
 
 <!ENTITY cbeditor.quickfindtextbox "Быстрый поиск: ">
 
