--- a/chrome/custombuttons/locale/sk-SK/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/sk-SK/custombuttons/editor.dtd
@@ -1,27 +1,36 @@
 <!ENTITY editor.dialog.help "Help">
+<!ENTITY editor.dialog.help.accesskey "H">
 <!ENTITY editor.dialog.title "Upraviť tlačidlo">
 <!ENTITY editor.name "Názov:">
+<!ENTITY editor.name.accesskey "N">
 <!ENTITY editor.name.tooltiptext "Určuje text a bublinový popis tlačidla">
 <!ENTITY editor.image "Obrázok:">
-<!ENTITY editor.select "Prehľadávať...">
+<!ENTITY editor.image.accesskey "m">
+<!ENTITY editor.select "Prehľadávať…">
+<!ENTITY editor.select.accesskey "o">
 <!ENTITY editor.base64 "⇒ base64">
+<!ENTITY editor.base64.accesskey "b">
 <!ENTITY editor.base64.tooltiptext "Skonvertuje obrázok na formát base64 (údaje:image/png;base64,...)">
 <!ENTITY editor.code "Kód">
+<!ENTITY editor.code.accesskey "C">
 <!ENTITY editor.code.tooltiptext "Vykoná sa po stlačení tlačidla">
 <!ENTITY editor.initCode "Vstupný kód">
+<!ENTITY editor.initCode.accesskey "I">
 <!ENTITY editor.initCode.tooltiptext "Vykoná sa pri štarte prehliadača">
 <!ENTITY editor.code.defaultValue "/*KÓD*/">
 <!ENTITY editor.initCode.defaultValue "/*Vstupný kód*/">
 <!ENTITY editor.Apply "Apply">
 <!ENTITY editor.urlfield "Button URL:">
+<!ENTITY editor.urlfield.accesskey "U">
 <!ENTITY editor.buttonSettings "Button settings">
+<!ENTITY editor.buttonSettings.accesskey "s">
 <!ENTITY editor.buttonSettings.tooltiptext "Button settings panel">
 <!ENTITY editor.buttonSettings.hotKeyGroupbox "&quot;Hot&quot; key">
 <!ENTITY editor.buttonSettings.accelkey "Hotkey:">
 <!ENTITY editor.buttonSettings.disableDefaultKeyBehavior "Disable default action for specified hotkey">
 <!ENTITY editor.buttonSettings.initializationGroupbox "Initialization">
 <!ENTITY editor.buttonSettings.initInCustomizeToolbarDialog "Enable initialization in &quot;Customize Toolbar&quot; dialog">
-<!ENTITY editor.buttonSettings.addMoreKeys "More...">
+<!ENTITY editor.buttonSettings.addMoreKeys "More…">
 
 <!ENTITY cbeditor.quickfindtextbox "Quick Find: ">
 
