! Changed: "Apply" button name changed to "Save"

--- a/chrome/custombuttons/locale/en-US/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/en-US/custombuttons/editor.dtd
@@ -19,7 +19,7 @@
 <!ENTITY editor.initCode.tooltiptext "Executes on browser startup">
 <!ENTITY editor.code.defaultValue "/*CODE*/">
 <!ENTITY editor.initCode.defaultValue "/*Initialization Code*/">
-<!ENTITY editor.Apply "Apply">
+<!ENTITY editor.Apply "Save">
 <!ENTITY editor.urlfield "Button URL:">
 <!ENTITY editor.urlfield.accesskey "U">
 <!ENTITY editor.buttonSettings "Button settings">
