! Changed: Dots were replaced by ellipses

--- a/chrome/custombuttons/locale/pl-PL/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/pl-PL/custombuttons/custombuttons.properties
@@ -1,8 +1,8 @@
 RemoveConfirm=Usunąć przycisk "%s"?
 UpdateConfirm=Are you sure you want to update "%s" button with the %n button ?
-ButtonAddedAlert=Przycisk został utworzony.\nAby dodać przycisk do paska narzędzi, wybierz z menu "Widok -> Paski narzędzi -> Dostosuj..."
+ButtonAddedAlert=Przycisk został utworzony.\nAby dodać przycisk do paska narzędzi, wybierz z menu "Widok -> Paski narzędzi -> Dostosuj…"
 InstallConfirm=Czy napewno zainstalować przycisk "%s" ?
-OpenInEditor=Edit...
+OpenInEditor=Edit…
 ButtonDoesntExist=Can't execute code because button doesn't exist yet
 AddButtonEditorDialogTitle=Add new button
 ButtonErrors=Przycisk nie został utworzony ponieważ jego kod zawiera błędy!
