--- a/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.dtd
@@ -1,5 +1,5 @@
-<!ENTITY custombuttons.viewMenu_Item "Pridať nové tlačidlo...">
-<!ENTITY custombuttons.buttonPopup.edit "Upraviť tlačidlo...">
+<!ENTITY custombuttons.viewMenu_Item "Pridať nové tlačidlo…">
+<!ENTITY custombuttons.buttonPopup.edit "Upraviť tlačidlo…">
 <!ENTITY custombuttons.buttonPopup.remove "Odstrániť tlačidlo">
 <!ENTITY custombuttons.buttonPopup.clone "Vytvoriť kópiu tlačidla">
 <!ENTITY custombuttons.buttonPopup.copyURI "Kopírovať do schránky">
