--- a/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.properties
@@ -1,8 +1,8 @@
 RemoveConfirm=要删除 "%s" 按钮吗?
 UpdateConfirm=Are you sure you want to update "%s" button with the %n button ?
-ButtonAddedAlert=您已经成功创建了该按钮。\n通过 “查看->工具栏->定制...“ 您可以把按钮放置在任意工具栏上
+ButtonAddedAlert=您已经成功创建了该按钮。\n通过 “查看->工具栏->定制…“ 您可以把按钮放置在任意工具栏上
 InstallConfirm=您是否确定要安装 "%s" 按钮？
-OpenInEditor=Edit...
+OpenInEditor=Edit…
 ButtonDoesntExist=Can't execute code because button doesn't exist yet
 AddButtonEditorDialogTitle=Add new button
 ButtonErrors=由于该按钮有错误，因此无法创建！
